# labs_second_course

./: .gitignore  README.md
labs_1_sem/: CMakeLists.txt  README.md
labs_1_sem/lab1/: .gitignore  CMakeLists.txt  MyString.cpp  MyString.h  README.md  StringWorker.cpp  StringWorker.h  main.cpp  performLab.cpp  performLab.h
labs_1_sem/lab1.1/: CMakeLists.txt  MyString.cpp  MyString.h  README.md  main.cpp
labs_1_sem/lab1.2/: CMakeLists.txt  README.md
labs_1_sem/lab1.2/include/: String.h  String.hpp
labs_1_sem/lab1.2/src/: String.cpp  main.cpp
labs_1_sem/lab2/: CMakeLists.txt  README.md
labs_1_sem/lab2/include/: Array.h
labs_1_sem/lab2/src/: Array.cpp  main.cpp
labs_1_sem/lab3/: CMakeLists.txt  README.md
labs_1_sem/lab3/include/: CommissionMember.hpp  Human.hpp  Teacher.hpp  TeacherCommissionMember.hpp
labs_1_sem/lab3/main/: main.cpp
labs_1_sem/lab3/src/: CommissionMember.cpp  Human.cpp  Teacher.cpp  TeacherCommissionMember.cpp
